# polyclean

./: .gitignore  README.md  README.rst  howtoinstall.txt  setup.cfg  todo.txt
conda/: requirements.txt
scripts/: comparison_functions.py  imaging_3C277.py  imaging_clean.py  imaging_polyclean.py  imaging_polyclean_plus.py  signatures.txt
scripts/benchmark/: README.rst  config.yaml  fill_df.py  fill_one_row.sh  open_df.py  pp_wsclean.py  run_exp.sh  simulate_pb.py  solve_lasso.py
scripts/data_processing/: catalog_fits2npz.py  visibility_ms2pickle.py
scripts/exp1/: config.yaml  fill_df.py  fill_one_row.sh  open_df.py  run_exp.sh  simulate_pb.py  solve_lasso.py
scripts/observations/: certificate.py  imaging_3C277.py  mjclean.py  pclean.py  wsclean.py
scripts/observations/article/: README.rst  dual_certificate.py  pclean.py  plot_certif.py  plot_reconstructions.py  preprocess_vis.py  wsclean.py
scripts/observations/article/vis/: vis.pkl
scripts/observations/article/vis/ssms.ms/: table.f0  table.f0_TSM0  table.f1  table.f1_TSM0  table.f2  table.f3  table.f3_TSM0  table.f4  table.f4_TSM0  table.f5  table.f5_TSM0  table.f6  table.f7
scripts/observations/article/vis/ssms.ms/ANTENNA/: table.f0  table.f0i
scripts/observations/article/vis/ssms.ms/DATA_DESCRIPTION/: table.f0
scripts/observations/article/vis/ssms.ms/FEED/: table.f0  table.f0i
scripts/observations/article/vis/ssms.ms/FIELD/: table.f0  table.f0i
scripts/observations/article/vis/ssms.ms/OBSERVATION/: table.f0  table.f0i
scripts/observations/article/vis/ssms.ms/POLARIZATION/: table.f0  table.f0i
scripts/observations/article/vis/ssms.ms/SOURCE/: table.f0  table.f0i
scripts/observations/article/vis/ssms.ms/SPECTRAL_WINDOW/: table.f0  table.f0i
scripts/simulations_extended/: polyclean_gaussdict.py  polyclean_wavelets.py
scripts/simulations_extended/article/: README.rst  gauss_pclean.py  plots.py  reconstructions.py
scripts/simulations_ps/: comparison.py  comparison_functions.py  imaging_apgd.py  imaging_clean.py  imaging_monofw.py  imaging_polyclean.py  imaging_polyclean_plus.py
scripts/time_comparison/: postprocess.py  sim_ps.py
src/polyclean/: __init__.py  clean_utils.py  image_utils.py  kernels.py  polyclean.py  ra_utils.py  reconstructions.py
src/tests/: test_generatorVisOp.py
