[metadata]
name = polyclean
summary = PolyCLEAN algorithm for radio interferometric imaging, based on Polyatomic Frank-Wolfe.
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = Adrian JARRET
author_email = adrian.jarret5@gmail.com
url = https://github.com/AdriaJ/polyclean
download_url = https://github.com/AdriaJ/polyclean
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
license = MIT

[options]
package_dir =
	= src/
packages =
	polyclean
zip_safe = True
include_package_data = True
python_requires = >= 3.9, < 3.12
install_requires =
	pandas >= 1.2, < 2
	matplotlib >= 3.3, < 4
	tqdm >= 4.61, < 5
	statsmodels >= 0.13, < 1
	pytest >= 7.4, < 8
	notebook >= 7.0, < 8
	pyxu @ git+https://github.com/matthieumeo/pyxu
	pyfwl @ git+https://github.com/AdriaJ/pyfw-lasso@main
;	pycsou-pywt @ git+https://github.com/AdriaJ/pycsou-pywt@main